HV v2.1 // se modifica menu y se adiciona boton up con JS

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="card-body">
               <h5 class="card-title">Maquetacion</h5>
-              <p class="card-text">En el diseño se utiliza el framework <b>Bootstrap.</b></p>
+              <p class="card-text">El diseño utiliza el framework <b>Bootstrap</b> y algo de <b>JavaScript</b>.</p>
               <a href="https://getbootstrap.com/" class="btn btn-primary">Ir al sitio</a>
             </div>
             <div class="card-footer text-muted">
@@ -238,7 +238,18 @@
             <br>
             <button class="btn btn-outline-success me-2" type="submit" class="btn btn-primary">Enviar</button>
         </form>
+
+        <!-- Boton hacia arriba-->
+        <div id="boton-up">
+            <i class="fas fa-chevron-up"></i>
+        </div>
+
+        <script src="js/script.js"></script>
+        <script src="https://kit.fontawesome.com/2d30bda616.js" crossorigin="anonymous"></script>
 </body>
+
+
+
 </div>
 
 </html>
